--- a/SimpleUI/Pages/FetchData.razor
+++ b/SimpleUI/Pages/FetchData.razor
@@ -1,11 +1,12 @@
 ﻿@page "/fetchdata"
 @inject HttpClient Http
+@using Refit;
 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (_forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -21,7 +22,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var forecast in _forecasts)
             {
                 <tr>
                     <td>@forecast.Date.ToShortDateString()</td>
@@ -35,21 +36,22 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    private List<WeatherModel> _forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        var weatherData = RestService.For<IWeatherData>("https://localhost:5001");
+        _forecasts = await weatherData.GetWeather();
     }
 
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
+    //public class WeatherForecast
+    //{
+    //    public DateTime Date { get; set; }
 
-        public int TemperatureC { get; set; }
+    //    public int TemperatureC { get; set; }
 
-        public string Summary { get; set; }
+    //    public string Summary { get; set; }
 
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    }
+    //    public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    //}
 }
