--- a/SimpleUI/Pages/Index.razor
+++ b/SimpleUI/Pages/Index.razor
@@ -32,7 +32,7 @@
     {
         await _guestData.CreateGuest(new GuestModel
         {
-            Id = _guestList.Count + 1,
+            Id = _guestList.Max(x=>x.Id) + 1,
             FirstName = guest.FirstName,
             LastName = guest.LastName
         });
